add staged tomatoes

--- a/common/src/main/resources/assets/avaritia_delight/lang/en_us.json
+++ b/common/src/main/resources/assets/avaritia_delight/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "block.avaritia_delight.blaze_tomato": "Blaze Tomato",
+  "block.avaritia_delight.budding_blaze_tomato": "Blaze Tomato",
   "block.avaritia_delight.crystal_cabbage": "Crystal Cabbage",
   "block.avaritia_delight.diamond_lattice_potato": "Diamond Lattice Potato",
   "block.avaritia_delight.extreme_cooking_pot": "Extreme Cooking Pot",
