--- a/common/src/main/resources/assets/avaritia_delight/lang/en_us.json
+++ b/common/src/main/resources/assets/avaritia_delight/lang/en_us.json
@@ -1,15 +1,24 @@
 {
   "block.avaritia_delight.blaze_tomato": "Blaze Tomato",
+  "block.avaritia_delight.blaze_tomato_crate": "Blaze Tomato Crate",
   "block.avaritia_delight.budding_blaze_tomato": "Blaze Tomato",
+  "block.avaritia_delight.crop_extractor": "Crop Extractor",
   "block.avaritia_delight.crystal_cabbage": "Crystal Cabbage",
+  "block.avaritia_delight.crystal_cabbage_crate": "Crystal Cabbage Crate",
   "block.avaritia_delight.diamond_lattice_potato": "Diamond Lattice Potato",
+  "block.avaritia_delight.diamond_lattice_potato_crate": "Diamond Lattice Potato Crate",
   "block.avaritia_delight.extreme_cooking_pot": "Extreme Cooking Pot",
+  "block.avaritia_delight.neutronium_hay_bale": "Neutronium Hay Bale",
   "block.avaritia_delight.neutronium_wheat": "Neutronium Wheat",
   "item.avaritia_delight.blaze_knife": "Blaze Knife",
+  "item.avaritia_delight.blaze_tomato": "Blaze Tomato",
   "item.avaritia_delight.blaze_tomato_sauce": "Blaze Tomato Sauce",
+  "item.avaritia_delight.blaze_tomato_seeds": "Blaze Tomato Seeds",
   "item.avaritia_delight.cosmic_beef_patty": "Cosmic Beef Patty",
   "item.avaritia_delight.cosmic_minced_beef": "Cosmic Minced Beef",
+  "item.avaritia_delight.crystal_cabbage": "Crystal Cabbage",
   "item.avaritia_delight.crystal_cabbage_leaf": "Crystal Cabbage Leaf",
+  "item.avaritia_delight.crystal_cabbage_seeds": "Crystal Cabbage Seeds",
   "item.avaritia_delight.crystal_knife": "Crystal Knife",
   "item.avaritia_delight.diamond_lattice_fries": "Diamond Lattice Fries",
   "item.avaritia_delight.infinity_apple": "Infinity Apple",
@@ -18,7 +27,9 @@
   "item.avaritia_delight.infinity_taco": "Infinity Taco",
   "item.avaritia_delight.neutronium_knife": "Neutronium Knife",
   "item.avaritia_delight.neutronium_pot": "Neutronium Pot",
+  "item.avaritia_delight.neutronium_wheat": "Neutronium Wheat",
   "item.avaritia_delight.neutronium_wheat_dough": "Neutronium Wheat Dough",
+  "item.avaritia_delight.neutronium_wheat_seeds": "Neutronium Wheat Seeds",
   "item.avaritia_delight.pasta_with_cosmic_meatballs": "Pasta With Cosmic Meatballs",
   "item.avaritia_delight.raw_crystal_pasta": "Raw Crystal Pasta",
   "item.avaritia_delight.slice_of_endless_cake": "Slice Of Endless Cake",
