--- a/common/src/main/resources/assets/avaritia_delight/lang/en_us.json
+++ b/common/src/main/resources/assets/avaritia_delight/lang/en_us.json
@@ -8,8 +8,12 @@
   "block.avaritia_delight.diamond_lattice_potato": "Diamond Lattice Potato",
   "block.avaritia_delight.diamond_lattice_potato_crate": "Diamond Lattice Potato Crate",
   "block.avaritia_delight.extreme_cooking_pot": "Extreme Cooking Pot",
+  "block.avaritia_delight.extreme_stove": "Extreme Stove",
+  "block.avaritia_delight.infinity_cabinet": "Infinity Cabinet",
   "block.avaritia_delight.neutronium_hay_bale": "Neutronium Hay Bale",
   "block.avaritia_delight.neutronium_wheat": "Neutronium Wheat",
+  "block.avaritia_delight.soul_rich_soil": "Soul Rich Soil",
+  "block.avaritia_delight.soul_rich_soil_farmland": "Soul Rich Soil Farmland",
   "item.avaritia_delight.blaze_knife": "Blaze Knife",
   "item.avaritia_delight.blaze_tomato": "Blaze Tomato",
   "item.avaritia_delight.blaze_tomato_sauce": "Blaze Tomato Sauce",
@@ -33,5 +37,5 @@
   "item.avaritia_delight.pasta_with_cosmic_meatballs": "Pasta With Cosmic Meatballs",
   "item.avaritia_delight.raw_crystal_pasta": "Raw Crystal Pasta",
   "item.avaritia_delight.slice_of_endless_cake": "Slice Of Endless Cake",
-  "itemGroup.avaritia_delight.main": "Avaritia Delight"
+  "itemGroup.avaritia_delight.main": "Avaritia's Delight"
 }
