--- a/common/src/main/resources/assets/avaritia_delight/lang/en_us.json
+++ b/common/src/main/resources/assets/avaritia_delight/lang/en_us.json
@@ -25,9 +25,12 @@
   "item.avaritia_delight.crystal_cabbage_seeds": "Crystal Cabbage Seeds",
   "item.avaritia_delight.crystal_knife": "Crystal Knife",
   "item.avaritia_delight.diamond_lattice_fries": "Diamond Lattice Fries",
+  "item.avaritia_delight.furious_cocktail": "Furious Cocktail",
+  "item.avaritia_delight.how_did_we_get_here": "How Did We Get Here",
   "item.avaritia_delight.infinity_apple": "Infinity Apple",
   "item.avaritia_delight.infinity_knife": "Infinity Knife",
   "item.avaritia_delight.infinity_large_hamburger": "Infinity Large Hamburger",
+  "item.avaritia_delight.infinity_milk": "Infinity Milk",
   "item.avaritia_delight.infinity_taco": "Infinity Taco",
   "item.avaritia_delight.neutronium_knife": "Neutronium Knife",
   "item.avaritia_delight.neutronium_pot": "Neutronium Pot",
