--- a/common/src/main/resources/assets/avaritia_delight/lang/en_us.json
+++ b/common/src/main/resources/assets/avaritia_delight/lang/en_us.json
@@ -40,6 +40,5 @@
   "item.avaritia_delight.pasta_with_cosmic_meatballs": "Pasta With Cosmic Meatballs",
   "item.avaritia_delight.raw_crystal_pasta": "Raw Crystal Pasta",
   "item.avaritia_delight.slice_of_endless_cake": "Slice Of Endless Cake",
-  "itemGroup.avaritia_delight.main": "Avaritia's Delight",
-  "screen.avaritia_delight.extreme_cooking_pot": "Extreme Cooking Pot"
+  "itemGroup.avaritia_delight.main": "Avaritia's Delight"
 }
