--- a/common/src/main/resources/assets/avaritia_delight/lang/en_us.json
+++ b/common/src/main/resources/assets/avaritia_delight/lang/en_us.json
@@ -18,8 +18,8 @@
   "item.avaritia_delight.blaze_tomato": "Blaze Tomato",
   "item.avaritia_delight.blaze_tomato_sauce": "Blaze Tomato Sauce",
   "item.avaritia_delight.blaze_tomato_seeds": "Blaze Tomato Seeds",
-  "item.avaritia_delight.cosmic_beef_patty": "Cosmic Beef Patty",
-  "item.avaritia_delight.cosmic_minced_beef": "Cosmic Minced Beef",
+  "item.avaritia_delight.cosmic_beef": "Cosmic Beef",
+  "item.avaritia_delight.cosmic_beef_cooked": "Cosmic Beef Cooked",
   "item.avaritia_delight.crystal_cabbage": "Crystal Cabbage",
   "item.avaritia_delight.crystal_cabbage_leaf": "Crystal Cabbage Leaf",
   "item.avaritia_delight.crystal_cabbage_seeds": "Crystal Cabbage Seeds",
