--- a/common/src/main/resources/assets/avaritia_delight/lang/en_us.json
+++ b/common/src/main/resources/assets/avaritia_delight/lang/en_us.json
@@ -33,6 +33,8 @@
   "item.avaritia_delight.infinity_large_hamburger": "Infinity Large Hamburger",
   "item.avaritia_delight.infinity_milk": "Infinity Milk",
   "item.avaritia_delight.infinity_taco": "Infinity Taco",
+  "item.avaritia_delight.neutronium_bowl": "Neutronium Bowl",
+  "item.avaritia_delight.neutronium_bread": "Neutronium Bread",
   "item.avaritia_delight.neutronium_knife": "Neutronium Knife",
   "item.avaritia_delight.neutronium_pot": "Neutronium Pot",
   "item.avaritia_delight.neutronium_wheat": "Neutronium Wheat",
