update zh_cn and add crop extractor

--- a/common/src/main/resources/assets/avaritia_delight/lang/zh_cn.json
+++ b/common/src/main/resources/assets/avaritia_delight/lang/zh_cn.json
@@ -1,48 +1,48 @@
 {
-  "block.avaritia_delight.blaze_tomato": "炽骨番茄",
-  "block.avaritia_delight.blaze_tomato_crate": "箱装炽骨番茄",
-  "block.avaritia_delight.budding_blaze_tomato": "炽骨番茄",
+  "block.avaritia_delight.blaze_tomato": "烈火番茄",
+  "block.avaritia_delight.blaze_tomato_crate": "箱装烈火番茄",
+  "block.avaritia_delight.budding_blaze_tomato": "烈火番茄",
   "block.avaritia_delight.crop_extractor": "作物提取器",
-  "block.avaritia_delight.crystal_cabbage": "水晶卷心菜",
-  "block.avaritia_delight.crystal_cabbage_crate": "箱装水晶卷心菜",
-  "block.avaritia_delight.diamond_lattice_potato": "钻石晶格土豆",
-  "block.avaritia_delight.diamond_lattice_potato_crate": "箱装钻石晶格土豆",
+  "block.avaritia_delight.crystal_cabbage": "矩阵卷心菜",
+  "block.avaritia_delight.crystal_cabbage_crate": "箱装矩阵卷心菜",
+  "block.avaritia_delight.diamond_lattice_potato": "晶格马铃薯",
+  "block.avaritia_delight.diamond_lattice_potato_crate": "箱装晶格马铃薯",
   "block.avaritia_delight.extreme_cooking_pot": "终焉厨锅",
   "block.avaritia_delight.extreme_stove": "终焉炉灶",
   "block.avaritia_delight.infinity_cabinet": "无尽橱柜",
-  "block.avaritia_delight.neutronium_hay_bale": "中子素干草块",
-  "block.avaritia_delight.neutronium_wheat": "中子素小麦",
+  "block.avaritia_delight.neutronium_hay_bale": "中子态素干草块",
+  "block.avaritia_delight.neutronium_wheat": "中子态素小麦",
   "block.avaritia_delight.soul_rich_soil": "灵魂沃土",
   "block.avaritia_delight.soul_rich_soil_farmland": "灵魂沃土耕地",
   "emi.category.avaritia_delight.extreme_cooking": "终焉烹饪",
-  "item.avaritia_delight.blaze_knife": "炽骨刀",
-  "item.avaritia_delight.blaze_tomato": "炽骨番茄",
-  "item.avaritia_delight.blaze_tomato_sauce": "炽骨番茄酱",
-  "item.avaritia_delight.blaze_tomato_seeds": "炽骨番茄种子",
-  "item.avaritia_delight.cosmic_beef": "寰宇牛肉馅",
-  "item.avaritia_delight.cosmic_beef_cooked": "寰宇牛肉饼",
-  "item.avaritia_delight.crystal_cabbage": "水晶卷心菜",
-  "item.avaritia_delight.crystal_cabbage_leaf": "水晶卷心菜叶",
-  "item.avaritia_delight.crystal_cabbage_seeds": "水晶卷心菜种子",
-  "item.avaritia_delight.crystal_knife": "水晶刀",
-  "item.avaritia_delight.diamond_lattice_fries": "钻石晶格薯条",
-  "item.avaritia_delight.furious_cocktail": "狂乱的鸡尾酒",
-  "item.avaritia_delight.how_did_we_get_here": "为什么会变成这样呢",
-  "item.avaritia_delight.infinity_apple": "无尽苹果",
-  "item.avaritia_delight.infinity_knife": "无尽刀",
-  "item.avaritia_delight.infinity_large_hamburger": "无尽大汉堡",
-  "item.avaritia_delight.infinity_milk": "无尽牛奶",
-  "item.avaritia_delight.infinity_taco": "无尽卷饼",
-  "item.avaritia_delight.neutronium_bowl": "中子素碗",
-  "item.avaritia_delight.neutronium_bread": "中子素面包",
-  "item.avaritia_delight.neutronium_knife": "中子素刀",
-  "item.avaritia_delight.neutronium_pot": "中子素锅",
-  "item.avaritia_delight.neutronium_wheat": "中子素小麦",
+  "item.avaritia_delight.blaze_knife": "炽火之斩骨刃",
+  "item.avaritia_delight.blaze_tomato": "烈火番茄",
+  "item.avaritia_delight.blaze_tomato_sauce": "烈火番茄酱",
+  "item.avaritia_delight.blaze_tomato_seeds": "烈火番茄种子",
+  "item.avaritia_delight.cosmic_beef": "寰宇肉馅",
+  "item.avaritia_delight.cosmic_beef_cooked": "寰宇肉饼",
+  "item.avaritia_delight.crystal_cabbage": "矩阵卷心菜",
+  "item.avaritia_delight.crystal_cabbage_leaf": "矩阵卷心菜叶",
+  "item.avaritia_delight.crystal_cabbage_seeds": "矩阵卷心菜种子",
+  "item.avaritia_delight.crystal_knife": "晶能矩阵之刃",
+  "item.avaritia_delight.diamond_lattice_fries": "晶格薯条",
+  "item.avaritia_delight.furious_cocktail": "狂乱鸡尾酒",
+  "item.avaritia_delight.how_did_we_get_here": "何以至此？",
+  "item.avaritia_delight.infinity_apple": "蚀界伊甸之果",
+  "item.avaritia_delight.infinity_knife": "落幕苍穹之刃",
+  "item.avaritia_delight.infinity_large_hamburger": "坍缩巨无霸",
+  "item.avaritia_delight.infinity_milk": "绝净之乳",
+  "item.avaritia_delight.infinity_taco": "衔尾蛇噬之卷",
+  "item.avaritia_delight.neutronium_bowl": "中子态素碗",
+  "item.avaritia_delight.neutronium_bread": "简并态面包",
+  "item.avaritia_delight.neutronium_knife": "中微旷渺之刃",
+  "item.avaritia_delight.neutronium_pot": "中子态素锅",
+  "item.avaritia_delight.neutronium_wheat": "中子态素小麦",
   "item.avaritia_delight.neutronium_wheat_dough": "中子素面团",
-  "item.avaritia_delight.neutronium_wheat_seeds": "中子素小麦种子",
-  "item.avaritia_delight.pasta_with_cosmic_meatballs": "寰宇肉丸水晶意面",
+  "item.avaritia_delight.neutronium_wheat_seeds": "中子态素小麦种子",
+  "item.avaritia_delight.pasta_with_cosmic_meatballs": "晶格星寰坍缩面",
   "item.avaritia_delight.raw_crystal_pasta": "生水晶意面",
-  "item.avaritia_delight.slice_of_endless_cake": "一片贪婪蛋糕",
+  "item.avaritia_delight.slice_of_endless_cake": "贪婪蛋糕切片",
   "itemGroup.avaritia_delight.main": "无尽乐事",
   "jei.category.avaritia_delight.extreme_cooking": "终焉烹饪"
 }
