--- a/common/src/main/resources/assets/avaritia_delight/lang/en_us.json
+++ b/common/src/main/resources/assets/avaritia_delight/lang/en_us.json
@@ -8,7 +8,9 @@
   "block.avaritia_delight.diamond_lattice_potato": "Diamond Lattice Potato",
   "block.avaritia_delight.diamond_lattice_potato_crate": "Diamond Lattice Potato Crate",
   "block.avaritia_delight.extreme_cooking_pot": "Extreme Cooking Pot",
+  "block.avaritia_delight.extreme_skillet": "Extreme Skillet",
   "block.avaritia_delight.extreme_stove": "Extreme Stove",
+  "block.avaritia_delight.infinity_basket": "Infinity Basket",
   "block.avaritia_delight.infinity_cabinet": "Infinity Cabinet",
   "block.avaritia_delight.neutronium_hay_bale": "Neutronium Hay Bale",
   "block.avaritia_delight.neutronium_wheat": "Neutronium Wheat",
@@ -27,13 +29,24 @@
   "item.avaritia_delight.crystal_cabbage_seeds": "Crystal Cabbage Seeds",
   "item.avaritia_delight.crystal_knife": "Crystal Knife",
   "item.avaritia_delight.diamond_lattice_fries": "Diamond Lattice Fries",
+  "item.avaritia_delight.endest_egg": "Endest Egg",
+  "item.avaritia_delight.endest_egg_sandwich": "Endest Egg Sandwich",
+  "item.avaritia_delight.endest_fried_egg": "Endest Fried Egg",
+  "item.avaritia_delight.endest_pie": "Endest Pie",
+  "item.avaritia_delight.experience_jelly": "Experience Jelly",
   "item.avaritia_delight.furious_cocktail": "Furious Cocktail",
   "item.avaritia_delight.how_did_we_get_here": "How Did We Get Here",
   "item.avaritia_delight.infinity_apple": "Infinity Apple",
+  "item.avaritia_delight.infinity_catalyst_cookie": "Infinity Catalyst Cookie",
+  "item.avaritia_delight.infinity_flowers_tea": "Infinity Flowers Tea",
+  "item.avaritia_delight.infinity_fries": "Infinity Fries",
   "item.avaritia_delight.infinity_knife": "Infinity Knife",
   "item.avaritia_delight.infinity_large_hamburger": "Infinity Large Hamburger",
   "item.avaritia_delight.infinity_milk": "Infinity Milk",
+  "item.avaritia_delight.infinity_popsicle": "Infinity Popsicle",
+  "item.avaritia_delight.infinity_salad": "Infinity Salad",
   "item.avaritia_delight.infinity_taco": "Infinity Taco",
+  "item.avaritia_delight.mobs_stew": "Mobs Stew",
   "item.avaritia_delight.neutronium_bowl": "Neutronium Bowl",
   "item.avaritia_delight.neutronium_bread": "Neutronium Bread",
   "item.avaritia_delight.neutronium_knife": "Neutronium Knife",
@@ -43,7 +56,13 @@
   "item.avaritia_delight.neutronium_wheat_seeds": "Neutronium Wheat Seeds",
   "item.avaritia_delight.pasta_with_cosmic_meatballs": "Pasta With Cosmic Meatballs",
   "item.avaritia_delight.raw_crystal_pasta": "Raw Crystal Pasta",
+  "item.avaritia_delight.record_fragment_cookie": "Record Fragment Cookie",
+  "item.avaritia_delight.slice_of_endest_pie": "Slice of Endest Pie",
   "item.avaritia_delight.slice_of_endless_cake": "Slice Of Endless Cake",
+  "item.avaritia_delight.slice_of_star_pie": "Slice of Star Pie",
+  "item.avaritia_delight.star_pie": "Star Pie",
+  "item.avaritia_delight.star_pie_crust": "Star Pie Crust",
+  "item.avaritia_delight.ultimate_gourmet_stew": "Ultimate Gourmet Stew",
   "itemGroup.avaritia_delight.main": "Avaritia's Delight",
   "jei.category.avaritia_delight.crop_extractor": "Crop Extract",
   "jei.category.avaritia_delight.extreme_cooking": "Extreme Cooking"
