add some recipes and blocks

--- a/common/src/main/resources/assets/avaritia_delight/lang/en_us.json
+++ b/common/src/main/resources/assets/avaritia_delight/lang/en_us.json
@@ -7,15 +7,18 @@
   "block.avaritia_delight.crystal_cabbage_crate": "Crystal Cabbage Crate",
   "block.avaritia_delight.diamond_lattice_potato": "Diamond Lattice Potato",
   "block.avaritia_delight.diamond_lattice_potato_crate": "Diamond Lattice Potato Crate",
+  "block.avaritia_delight.endest_pie": "Endest Pie",
   "block.avaritia_delight.extreme_cooking_pot": "Extreme Cooking Pot",
   "block.avaritia_delight.extreme_skillet": "Extreme Skillet",
   "block.avaritia_delight.extreme_stove": "Extreme Stove",
   "block.avaritia_delight.infinity_basket": "Infinity Basket",
   "block.avaritia_delight.infinity_cabinet": "Infinity Cabinet",
+  "block.avaritia_delight.mobs_stew": "Mobs Stew",
   "block.avaritia_delight.neutronium_hay_bale": "Neutronium Hay Bale",
   "block.avaritia_delight.neutronium_wheat": "Neutronium Wheat",
   "block.avaritia_delight.soul_rich_soil": "Soul Rich Soil",
   "block.avaritia_delight.soul_rich_soil_farmland": "Soul Rich Soil Farmland",
+  "block.avaritia_delight.star_pie": "Star Pie",
   "emi.category.avaritia_delight.crop_extractor": "Crop Extract",
   "emi.category.avaritia_delight.extreme_cooking": "Extreme Cooking",
   "item.avaritia_delight.blaze_knife": "Blaze Knife",
@@ -32,7 +35,6 @@
   "item.avaritia_delight.endest_egg": "Endest Egg",
   "item.avaritia_delight.endest_egg_sandwich": "Endest Egg Sandwich",
   "item.avaritia_delight.endest_fried_egg": "Endest Fried Egg",
-  "item.avaritia_delight.endest_pie": "Endest Pie",
   "item.avaritia_delight.experience_jelly": "Experience Jelly",
   "item.avaritia_delight.furious_cocktail": "Furious Cocktail",
   "item.avaritia_delight.how_did_we_get_here": "How Did We Get Here",
@@ -46,7 +48,6 @@
   "item.avaritia_delight.infinity_popsicle": "Infinity Popsicle",
   "item.avaritia_delight.infinity_salad": "Infinity Salad",
   "item.avaritia_delight.infinity_taco": "Infinity Taco",
-  "item.avaritia_delight.mobs_stew": "Mobs Stew",
   "item.avaritia_delight.neutronium_bowl": "Neutronium Bowl",
   "item.avaritia_delight.neutronium_bread": "Neutronium Bread",
   "item.avaritia_delight.neutronium_knife": "Neutronium Knife",
@@ -60,7 +61,6 @@
   "item.avaritia_delight.slice_of_endest_pie": "Slice of Endest Pie",
   "item.avaritia_delight.slice_of_endless_cake": "Slice Of Endless Cake",
   "item.avaritia_delight.slice_of_star_pie": "Slice of Star Pie",
-  "item.avaritia_delight.star_pie": "Star Pie",
   "item.avaritia_delight.star_pie_crust": "Star Pie Crust",
   "item.avaritia_delight.ultimate_gourmet_stew": "Ultimate Gourmet Stew",
   "itemGroup.avaritia_delight.main": "Avaritia's Delight",
