--- a/common/src/main/resources/assets/avaritia_delight/lang/zh_cn.json
+++ b/common/src/main/resources/assets/avaritia_delight/lang/zh_cn.json
@@ -8,8 +8,10 @@
   "block.avaritia_delight.diamond_lattice_potato": "晶格马铃薯",
   "block.avaritia_delight.diamond_lattice_potato_crate": "箱装晶格马铃薯",
   "block.avaritia_delight.extreme_cooking_pot": "终焉厨锅",
+  "block.avaritia_delight.extreme_skillet": "无尽煎锅",
   "block.avaritia_delight.extreme_stove": "终焉炉灶",
   "block.avaritia_delight.infinity_cabinet": "无尽橱柜",
+  "block.avaritia_delight.infinity_basket": "无尽篮子",
   "block.avaritia_delight.neutronium_hay_bale": "中子态素干草块",
   "block.avaritia_delight.neutronium_wheat": "中子态素小麦",
   "block.avaritia_delight.soul_rich_soil": "灵魂沃土",
@@ -34,6 +36,11 @@
   "item.avaritia_delight.infinity_large_hamburger": "坍缩巨无霸",
   "item.avaritia_delight.infinity_milk": "绝净之乳",
   "item.avaritia_delight.infinity_taco": "衔尾蛇噬之卷",
+  "item.avaritia_delight.infinity_popsicle": "无尽冰棍",
+  "item.avaritia_delight.infinity_catalyst_cookie": "无尽催化剂曲奇",
+  "item.avaritia_delight.infinity_flowers_tea": "无尽花茶",
+  "item.avaritia_delight.infinity_fries": "终焉薯条",
+  "item.avaritia_delight.infinity_salad": "无尽沙拉",
   "item.avaritia_delight.neutronium_bowl": "中子态素碗",
   "item.avaritia_delight.neutronium_bread": "简并态面包",
   "item.avaritia_delight.neutronium_knife": "中微旷渺之刃",
@@ -41,9 +48,21 @@
   "item.avaritia_delight.neutronium_wheat": "中子态素小麦",
   "item.avaritia_delight.neutronium_wheat_dough": "中子素面团",
   "item.avaritia_delight.neutronium_wheat_seeds": "中子态素小麦种子",
+  "item.avaritia_delight.endest_egg": "终望蛋",
+  "item.avaritia_delight.endest_egg_sandwich":"终望三明治",
+  "item.avaritia_delight.endest_fried_egg": "终望煎蛋",
+  "block.avaritia_delight.endest_pie": "终望派",
+  "item.avaritia_delight.slice_of_endest_pie":"终望派切片",
+  "block.avaritia_delight.star_pie": "恒星派",
+   "item.avaritia_delight.slice_of_star_pie": "恒星派切片",
+  "item.avaritia_delight.star_pie_crust": "恒星派胚",
+  "item.avaritia_delight.experience_jelly": "经验果冻",
   "item.avaritia_delight.pasta_with_cosmic_meatballs": "晶格星寰坍缩面",
   "item.avaritia_delight.raw_crystal_pasta": "生水晶意面",
   "item.avaritia_delight.slice_of_endless_cake": "贪婪蛋糕切片",
+  "item.avaritia_delight.record_fragment_cookie": "唱片碎片曲奇",
+  "item.avaritia_delight.ultimate_gourmet_stew": "究极煲",
+  "block.avaritia_delight.mobs_stew": "怪物大乱炖",
   "itemGroup.avaritia_delight.main": "无尽乐事",
   "jei.category.avaritia_delight.crop_extractor": "作物提取",
   "jei.category.avaritia_delight.extreme_cooking": "终焉烹饪"
