--- a/common/src/main/resources/assets/avaritia_delight/lang/zh_cn.json
+++ b/common/src/main/resources/assets/avaritia_delight/lang/zh_cn.json
@@ -63,6 +63,8 @@
   "item.avaritia_delight.record_fragment_cookie": "唱片碎片曲奇",
   "item.avaritia_delight.ultimate_gourmet_stew": "究极煲",
   "block.avaritia_delight.mobs_stew": "怪物大乱炖",
+  "effect.avaritia_delight.blaze_effect": "炽焰",
+  "effect.avaritia_delight.endest_effect": "终望",
   "itemGroup.avaritia_delight.main": "无尽乐事",
   "jei.category.avaritia_delight.crop_extractor": "作物提取",
   "jei.category.avaritia_delight.extreme_cooking": "终焉烹饪"
