--- a/common/src/main/resources/assets/avaritia_delight/lang/en_us.json
+++ b/common/src/main/resources/assets/avaritia_delight/lang/en_us.json
@@ -19,6 +19,7 @@
   "block.avaritia_delight.soul_rich_soil": "Soul Rich Soil",
   "block.avaritia_delight.soul_rich_soil_farmland": "Soul Rich Soil Farmland",
   "block.avaritia_delight.star_pie": "Star Pie",
+  "block.avaritia_delight.star_campfire": "Star Campfire",
   "emi.category.avaritia_delight.crop_extractor": "Crop Extract",
   "emi.category.avaritia_delight.extreme_cooking": "Extreme Cooking",
   "item.avaritia_delight.blaze_knife": "Blaze Knife",
