--- a/common/src/main/resources/assets/avaritia_delight/lang/zh_cn.json
+++ b/common/src/main/resources/assets/avaritia_delight/lang/zh_cn.json
@@ -56,6 +56,7 @@
   "block.avaritia_delight.star_pie": "恒星派",
    "item.avaritia_delight.slice_of_star_pie": "恒星派切片",
   "item.avaritia_delight.star_pie_crust": "恒星派胚",
+  "block.avaritia_delight.star_campfire": "恒星营火",
   "item.avaritia_delight.experience_jelly": "经验果冻",
   "item.avaritia_delight.pasta_with_cosmic_meatballs": "晶格星寰坍缩面",
   "item.avaritia_delight.raw_crystal_pasta": "生水晶意面",
